--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,29 @@
   font-size: 66px;
   padding-right: 5rem;
 }
+
+/* Resume Page */
+.resume-right-col {
+  background: #27221f;
+  color: white; 
+}
+
+.resume-col-content {
+  text-align: center;
+}
+
+.resume-col-content img {
+  height: 200px;
+}
+
+.resume-col h2 {
+  padding-top: 2em;
+}
+
+.resume-col hr {
+  color: grey;
+  border-top: none;
+  border-bottom: 3px solid #833fb2;
+  width:50%;
+}
+
