--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@
   background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.header-title {
+  text-decoration: none;
+  color: white;
+}
+.header-title-drawer{
+  text-decoration: none;
+  color: black;
+}
+
 .landing-grid {
   background: #0F2027;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
@@ -132,7 +141,19 @@
   width:50%;
 }
 
-.education-year h4 {
+.education-year h4, .experience-year h4 {
   margin-top: 0px;
+}
+
+.resume-skill-col{
+  display: flex;
+}
+.resume-skill-col span {
+  width: 100px;
+}
+
+.resume-skill-progress{
+  margin: auto;
+  width: 75%;
 }
 
