--- a/src/App.css
+++ b/src/App.css
@@ -17,37 +17,37 @@
 
 /* Landing Page */
 .landing-grid {
-  background: #0F2027;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: url("/img/Mountains_Background.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  opacity: 0.8;
+  z-index: -1;
   text-align: center;
   position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
 }
-.avatar-img {
-  height: 250px;
-  padding-top: 5em;
-}
+
 .banner-text {
-  background-color: black;
+  background-color: rgba(31, 43, 32, 0.74);
   opacity: .8;
-  width: 75%;
+  width: 900px;
   margin: auto;
   border-radius: 10px;
-  margin-top: 50px;
-  padding: 40px;
+  margin-top: 90px;
+  margin-right: 50px;
+  padding: 22px;
 }
 .banner-text h1 {
-  font-size: 66px;
+  font-size: 50px;
   font-weight: bold;
   color: white;
   margin-top: 0px;
 }
 .banner-text hr {
-  border-top: 5px dotted white;
+  border-top: 3px dotted white;
   width: 50%;
   margin: auto;
 }
@@ -59,13 +59,13 @@
 .social-links {
   display: flex;
   justify-content: space-between;
-  width: 50%;
+  width: 175px;
   margin: auto;
 }
 .social-links i {
   color: white;
-  font-size: 5em;
-  padding: 8px;
+  font-size: 3em;
+  padding: 0px;
 }
 
 
@@ -185,7 +185,15 @@
     width: 70%;
   }
   .banner-text h1{
-    font-size: 34px;
+    font-size: 26px;
+  }
+  .banner-text p{
+    font-size: 15px;
+    padding: 0em;
+  }
+  .social-links i{
+    font-size: 2em;
+    padding:  0em;
   }
 }
 
