--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+
+
+/* site layout */
+.mdl-layout__content{
+  background-image: url("/img/Mountains_Background.jpg");
+  /* crops the image differently to landing page but I like the effect */
+}
+
+
+
 /* Nav Bar */
 .header-color {
   background: #0F2027;  /* fallback for old browsers */
@@ -13,6 +23,7 @@
   text-decoration: none;
   color: black;
 }
+
 
 
 /* Landing Page */
@@ -31,8 +42,9 @@
 }
 
 .banner-text {
-  background-color: rgba(31, 43, 32, 0.74);
-  opacity: .8;
+  background-color: rgba(32, 58, 67, 0.58);
+  /* background-color: white; */
+  opacity: 1;
   width: 900px;
   margin: auto;
   border-radius: 10px;
@@ -43,11 +55,11 @@
 .banner-text h1 {
   font-size: 50px;
   font-weight: bold;
-  color: white;
   margin-top: 0px;
+  color: black;
 }
 .banner-text hr {
-  border-top: 3px dotted white;
+  border-top: 3px dotted black;
   width: 50%;
   margin: auto;
 }
@@ -55,6 +67,7 @@
   color: white;
   font-size: 20px;
   padding: 1em;
+  color: black;
 }
 .social-links {
   display: flex;
@@ -66,50 +79,10 @@
   color: white;
   font-size: 3em;
   padding: 0px;
-}
-
-
-/* Contact Page */
-.content > div {
-  display: flex;
-}
-.contact-body {
-  margin: auto;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  padding-top: 2em;
-}
-.contact-grid {
-  text-align: center;
-  justify-content: center;
-  width: 80%;
-  height: 550px;
-  background: white;
   color: black;
-  margin-bottom: 20px;
 }
-.contact-grid h2{
-  font-family: 'Anton', sans-serif;
-}
-.contact-grid p{
-  font-family: 'Oxygen', sans-serif;
-  font-weight: bold;
-}
-.contact-grid hr{
-  border-top: 5px dotted black;
-  width: 50%;
-  margin: auto;
-}
-.list-item-content {
-  font-size: 30px;
-  font-family: 'Anton';
-}
-.contact-list i{
-  font-size: 66px;
-  padding-right: 5rem;
-}
+
+
 
 
 /* Resume Page */
@@ -148,9 +121,10 @@
 }
 
 
+
 /* About Me Page */
 .aboutme-background{
-  background-image: url("/img/Autumn-2.jpg");
+  background-image: url("/img/Me_autumn.jpg");
   background-size: cover;
   height: 100%;
   position: fixed;
@@ -175,8 +149,95 @@
 }
 
 
-/* Responsive Design */
 
+/* Projects Page */
+.projects-background {
+  background-image: url("/img/Mountains_Background.jpg");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  opacity: 0.8;
+  z-index: -1;
+  text-align: center;
+  position: fixed;
+}
+
+
+
+/* Contact Page */
+.content > div {
+  display: flex;
+}
+.contact-body {
+  margin: auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+.contact-body .contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 70%;
+  height: 60%;
+  /* background-color: rgba(32, 58, 67, 0.58); */
+  background-color: white;
+  color: black;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  opacity:0.8;
+}
+.contact-grid h2{
+  font-family: 'Helvetica', sans-serif;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.contact-grid p{
+  font-family: 'Helvetica', sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  padding:.5rem;
+  padding-top:.2rem;
+}
+
+.contact-grid img{
+  padding: .5rem;
+  opacity: 1;  
+  /* NOT SURE how to make the opacity higher. contact-grid is overriding it */
+  z-index: -1;
+}
+.contact-grid hr{
+  border-top: 3px dotted black;
+  width: 50%;
+  margin: auto;
+}
+.list-item-content {
+  color:black;
+  font-size: 28px;
+  font-family: 'Helvetica';
+  font-weight: bold;
+  padding: 3rem;
+}
+.contact-list i{
+  font-size: 48px;
+  padding-right: 3rem;
+}
+.contact-list a{
+  color:black;
+  font-family: 'Helvetica';
+  font-weight: bold;
+  padding-bottom: 3rem;
+}
+
+
+
+
+
+/* Responsive Design */
 @media (max-width: 576px) {
   .mdl-layout .mdl-grid {
     padding: 0px;
