--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .banner-text {
-  background-color: rgba(32, 58, 67, 0.58);
+  /* background-color: rgba(32, 58, 67, 0.58); */
   /* background-color: white; */
   opacity: 1;
   width: 900px;
@@ -55,6 +55,11 @@
 .banner-text h1 {
   font-size: 50px;
   font-weight: bold;
+  margin-top: 0px;
+  color: black;
+}
+.banner-text h2 {
+  font-size: 30px;
   margin-top: 0px;
   color: black;
 }
@@ -168,28 +173,31 @@
 
 
 /* Contact Page */
+
+/* **REDO the whole content grid from scratch as there are a lot of unwanted inherited MDL styling** */
+
 .content > div {
   display: flex;
 }
 .contact-body {
-  margin: auto;
-  position: fixed;
-  width: 100%;
-  height: 100%;
+  /* margin: auto; */
+  /* position: fixed; */
+  /* width: 100%; */
+  /* height: 100%; */
   justify-content: center;
-  padding-top: 2em;
+  /* padding-top: 2em; */
 }
 .contact-body .contact-grid {
   text-align: center;
   justify-content: center;
-  width: 70%;
-  height: 60%;
-  /* background-color: rgba(32, 58, 67, 0.58); */
-  background-color: white;
+  /* width: 70%; */
+  /* border-radius: 10px; */
+  background-color: rgba(255,255,255,0.5);
   color: black;
-  margin-right: 30px;
-  margin-bottom: 20px;
+  /* margin-right: 30px; */
+  /* margin-bottom: 20px; */
   opacity:0.8;
+  /* padding-right:3rem; */
 }
 .contact-grid h2{
   font-family: 'Helvetica', sans-serif;
@@ -200,31 +208,28 @@
   font-family: 'Helvetica', sans-serif;
   font-weight: bold;
   font-size: 16px;
-  padding:.5rem;
-  padding-top:.2rem;
 }
 
 .contact-grid img{
-  padding: .5rem;
-  opacity: 1;  
-  /* NOT SURE how to make the opacity higher. contact-grid is overriding it */
-  z-index: -1;
+  padding: 50px;
+  padding-left: 0px;
+  padding-right: 400px;
 }
 .contact-grid hr{
   border-top: 3px dotted black;
   width: 50%;
   margin: auto;
 }
-.list-item-content {
+.contact-grid .mdl-list__item {
   color:black;
-  font-size: 28px;
+  font-size: 20px;
   font-family: 'Helvetica';
   font-weight: bold;
-  padding: 3rem;
+  padding: 1rem;
 }
 .contact-list i{
-  font-size: 48px;
-  padding-right: 3rem;
+  font-size: 30px;
+  padding-right: 1.5rem;
 }
 .contact-list a{
   color:black;
