--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 
 
-/* site layout */
+/* NEED to crop this image in photoshop then add to desired pages separately */
+
+/* site layout
 .mdl-layout__content{
   background-image: url("/img/Mountains_Background.jpg");
-  /* crops the image differently to landing page but I like the effect */
-}
+} */
 
 
 
@@ -174,71 +175,18 @@
 
 
 /* Contact Page */
-
-/* **REDO the whole content grid from scratch as there are a lot of unwanted inherited MDL styling** */
-
-.content > div {
-  display: flex;
+.contact-container{
+  width: 100%;
+  background-color: rgba(255,255,255,0.4);
 }
-.contact-body {
-  /* margin: auto; */
-  /* position: fixed; */
-  /* width: 100%; */
-  /* height: 100%; */
-  justify-content: center;
-  /* padding-top: 2em; */
-}
-.contact-body .contact-grid {
-  text-align: center;
-  justify-content: center;
-  /* width: 70%; */
-  /* border-radius: 10px; */
-  background-color: rgba(255,255,255,0.5);
-  color: black;
-  /* margin-right: 30px; */
-  /* margin-bottom: 20px; */
-  opacity:0.8;
-  /* padding-right:3rem; */
-}
-.contact-grid h2{
-  font-family: 'Helvetica', sans-serif;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-.contact-grid p{
-  font-family: 'Helvetica', sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.contact-grid img{
-  padding: 50px;
-  padding-left: 0px;
-  padding-right: 400px;
-}
-.contact-grid hr{
-  border-top: 3px dotted black;
+.contact-container > * {
+  float:left; 
   width: 50%;
-  margin: auto;
 }
-.contact-grid .mdl-list__item {
-  color:black;
-  font-size: 20px;
-  font-family: 'Helvetica';
-  font-weight: bold;
-  padding: 1rem;
+.contact-edge{
+  float:none;
+  clear:both;
 }
-.contact-list i{
-  font-size: 30px;
-  padding-right: 1.5rem;
-}
-.contact-list a{
-  color:black;
-  font-family: 'Helvetica';
-  font-weight: bold;
-  padding-bottom: 3rem;
-}
-
 
 
 
