--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,20 @@ a.header-title:hover{
 .resume-skill-col span {
   width: 100px;
 }
+.resume-skill-col .mdl-progress .progressbar {
+  /* background-color: rgb(63,81,181); */
+  background-color:rgba(184, 135, 120,1);
+  z-index: 1;
+  left: 0;
+}
+
+.resume-skill-col .mdl-progress .bufferbar {
+  background-image: none;
+  background-color:rgba(184, 135, 120,0.5);
+  z-index: 0;
+  left: 0;
+} 
+
 .resume-skill-progress{
   margin: auto;
   width: 75%;
