--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ a.header-title:hover{
   padding: 0px;
 }
 .resume-grid .resume-left-col{
-  height: 29%;
+  height: 333px;
   padding: 4em;
   padding-top: 1em;
   padding-right: 1.5em;
@@ -153,7 +153,10 @@ a.header-title:hover{
   background-color: rgb(255,255,255,0.5);
   opacity: 0.8;
   margin-top: 64px;
+  margin-left: 0px;
+  margin-right: 0px;
   border-radius: 3px;
+  width: 33.3333%;
 }
 .resume-grid .resume-right-col {
   background: rgb(0,0,0,0.8);
@@ -161,8 +164,11 @@ a.header-title:hover{
   padding: 4em;
   padding-top: 1em;
   margin-top: 64px;
+  margin-left: 0px;
+  margin-right: 0px;
   overflow-y: scroll;
   height: calc(100% - 66px);
+  width: 66.6667%;
 }
 .resume-grid .resume-left-col h2{
   margin-top: 2px;
@@ -193,19 +199,29 @@ a.header-title:hover{
   z-index: 1;
   left: 0;
 }
-
 .resume-skill-col .mdl-progress .bufferbar {
   background-image: none;
   background-color:rgba(184, 135, 120,0.5);
   z-index: 0;
   left: 0;
 } 
-
-.resume-skill-progress{
+.resume-skill-progress {
   margin: auto;
   width: 75%;
 }
-
+.publication-year a {
+  color: #fff;
+}
+.award-year h4 {
+  margin-top: 0px;
+}
+.reference-name p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.reference-name a{
+  color: #ddd; 
+}
 
 
 /* About Me Page */
