Add colour options nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ header.header-color {
 }
 a.header-title:hover{
   color: #b88778;
+  /* color: #fb9073; */
 }
 .header-title-drawer{
   text-decoration: none;
@@ -39,6 +40,7 @@ a.header-title:hover{
 }
 .mdl-layout .mdl-navigation a:hover {
   color: #b88778;
+  /* color: #fb9073; */
   text-transform: uppercase;
 }
 .material-icons {
@@ -177,7 +179,8 @@ a.header-title:hover{
 .resume-grid .resume-right-col .material-icons{
   font-size: 36px;
   margin-left: -42px;
-  color: #ffc9b9;
+  /* color: #ffc9b9; */
+  color: #fb9073;
   opacity: 0.7;
   z-index: 0;
 }
@@ -222,7 +225,7 @@ bottom: 0px;
 }
 .resume-skill-col .mdl-progress .progressbar {
   /* background-color: rgb(63,81,181); */
-  background-color:#fb9073;
+  background-color:#fb9073; 
   z-index: 1;
   left: 0;
 }
