--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,22 @@ a.header-title:hover{
 
 
 
+/* FOOTER */
+.footer-links {
+  text-align: left;
+  position: fixed;
+  bottom:0px;
+  left:10px;
+  z-index:1;
+}
+.footer-links i {
+  color: white;
+  font-size:22px;
+  padding: 10px;
+  padding-bottom:15px;
+}
+
+
 /* Landing Page */
 .ghost-me {
   display: none;
@@ -110,18 +126,6 @@ a.header-title:hover{
   padding-right: 0px;
   padding-top: 0px;
   font-size: 16px;
-}
-.social-links {
-  display: flex;
-  justify-content: space-between;
-  width: 175px;
-  margin: auto;
-}
-.social-links i {
-  color: white;
-  font-size: 3em;
-  padding: 0px;
-  color: black;
 }
 
 
@@ -328,6 +332,7 @@ color:white;
 
 /* Contact Page */
 .contact-background{
+  filter: saturate(1.2);
   background-image: url("/img/Background_Mountains_muted.jpg");
   background-size: cover;
   height: 100%;
@@ -335,40 +340,46 @@ color:white;
   position: fixed;
   top: 0px;
   left: 0px;
-  opacity: 0.8;
   z-index: -1;
 }
 .contact-container{
-  background-color: rgb(255,255,255,0.5);
+  /* background-color: rgb(255,255,255,0.5); */
   width:100%;
 }
 .contact-content{
   text-align: right;
-  margin-left: 8em;
-  margin-right: 8em;
-  margin-top: 64px;
-  padding-top: 1em;
-  padding-bottom: 1em;
+  margin-left: auto;
+  margin-right: 100px;
+  margin-top: 90px;
+  padding-top: 22px;
 }
 .contact-content h1{
-  text-align:right;
-  margin-bottom:0em;
-  margin-top: 0em;
+  font-size: 50px;
+  font-weight: 100px;
+  color:#222;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
 }
 .contact-content hr{
-  border-top: 2px solid rgb(0,0,0,0.8);
-  width:277px;
-  text-align: right;
-  margin-right:0em;
-  margin-left:auto;
-  padding-bottom:1em;
+  width: 270px;
+  border-top: 1px solid #333;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 3px;
+  margin-bottom: 70px;
 }
-.contact-content h4 {
-  margin-top: 1em;
+.contact-content h5 {
+  margin-top: 0px;
+  font-size: 25px;
+  color:#333;
+  margin-top: 30px;
 }
-
-
-
+.contact-content a {
+  font-size: 25px;
+  color:#333;
+  text-decoration: none;
+}
 
 
 
