--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ a.header-title:hover{
 }
 .mdl-layout .mdl-navigation a {
   color: #555;
+  font-weight: normal;
   text-transform: uppercase;
 }
 .mdl-layout .mdl-navigation a:hover {
@@ -99,13 +100,11 @@ a.header-title:hover{
   padding: 22px;
 }
 .banner-text h1 {
-  font-size: 50px;
-  font-weight: bold;
-  margin-top: 0px;
-  margin-bottom: 15px;
   color: black;
   font-weight: 100;
   font-size: 71px;
+  margin-top: 0px;
+  margin-bottom: 15px;
 }
 .banner-text h2 {
   font-size: 30px;
@@ -166,8 +165,7 @@ a.header-title:hover{
 
 
 .resume-grid .resume-right-col {
-  /* background: rgb(0,0,0,0.9); */
-  background: linear-gradient(180deg, rgba(0,0,0,0.95) 90%, rgba(0,0,0,0.8) 97%, rgba(0,0,0,0.7) 100%);
+  background: rgb(0,0,0,0.9);
   color: white; 
   padding: 4em;
   padding-top: 1em;
@@ -184,8 +182,6 @@ a.header-title:hover{
 .resume-grid .resume-right-col h4{
   margin-top: 0px;
   color: #fb9073;
-  /* opacity: 0.8; */
-  filter: saturate(0.8);
 }
 
 .resume-grid .resume-right-col .material-icons{
@@ -209,7 +205,6 @@ bottom: 0px;
   width: 200px;
 }
 .resume-grid .resume-left-col h2{
-  color: rgba(0,0,0,0.8);
   font-weight: 100;
   font-size: 36px;
   padding-right: 43px;
@@ -263,9 +258,7 @@ color:white;
 
 /* About Me Page */
 .aboutme-background{
-  background: linear-gradient(to right, rgba(255, 255, 255, 0.5),rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1),transparent), url("/img/Me_autumn_muted2.jpg");
-  /* background: linear-gradient(90deg, rgba(255, 255, 255, 0.3) 0%,rgba(255, 255, 255, 0.1) 30%, transparent 80%), url("/img/Me_autumn_muted2.jpg"); */
-  /* background-image: url("/img/Me_autumn_muted2.jpg"); */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1),transparent), url("/img/Me_autumn_muted2.jpg");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -317,13 +310,13 @@ color:white;
 .project-background {
   display:flex;
   background-image: url("/img/Background_Mountains_muted.jpg");
+  filter: saturate(1.2);
   background-size: cover;
   height: 100%;
   width: 100%;
   position: fixed;
   top: 0px;
   left: 0px;
-  opacity: 0.8;
   z-index: -1;
   text-align: center;
 }
