--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,9 @@ a.header-title:hover{
 
 
 .resume-grid .resume-right-col {
-  background: rgb(0,0,0,0.9);
+  /* background: rgb(0,0,0,0.9); */
+  background: linear-gradient(180deg, rgb(0,0,0,0.9) 80%,rgba(0,0,0, 0.8) 92%, rgba(0,0,0, 0.4)) 95%;
+
   color: white; 
   padding: 4em;
   padding-top: 1em;
@@ -339,7 +341,8 @@ color:white;
 /* Contact Page */
 .contact-background{
   filter: saturate(1.2);
-  background-image: url("/img/Background_Mountains_muted.jpg");
+  /* background-image: url("/img/Background_Mountains_muted.jpg"); */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2),transparent), url("/img/Background_Mountains_muted.jpg");
   background-size: cover;
   height: 100%;
   width: 100%;
