--- a/src/App.css
+++ b/src/App.css
@@ -311,7 +311,7 @@ color:white;
 /* Projects Page */
 .project-background {
   display:flex;
-  background: linear-gradient(to top, rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1),transparent), url("/img/Background_Mountains_muted.jpg");
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2),transparent), url("/img/Background_Mountains_muted.jpg");
   background-size: cover;
   filter: saturate(1.2);
   background-size: cover;
@@ -329,6 +329,12 @@ color:white;
   padding:10px;
   font-size: 30px;
 }
+
+/* .mdl-card__title{
+  width: 370px;
+  height: 200px;
+  margin-top: 150px;
+} */
 
 .mdl-card__supporting-text.CardText{
   background-color: rgba(184, 135, 120, 0.7);
